bindings/lisp/fae/audio.lisp

(in-package :cl-user)
(define-foreign-type audio-session-type () () (:actual-type :pointer))
(define-parse-method audio-session () (make-instance 'audio-session-type))
(defclass audio-session () ((audio-session-ptr :initarg :audio-session-ptr)))
(defmethod translate-to-foreign (x (type audio-session-type)) (slot-value x 'audio-session-ptr))
(defmethod translate-from-foreign (x (type audio-session-type)) (make-instance 'audio-session :audio-session-ptr x))
(define-foreign-type audio-device-type () () (:actual-type :pointer))
(define-parse-method audio-device () (make-instance 'audio-device-type))
(defclass audio-device () ((audio-device-ptr :initarg :audio-device-ptr)))
(defmethod translate-to-foreign (x (type audio-device-type)) (slot-value x 'audio-device-ptr))
(defmethod translate-from-foreign (x (type audio-device-type)) (make-instance 'audio-device :audio-device-ptr x))
(define-foreign-type audio-stream-type () () (:actual-type :pointer))
(define-parse-method audio-stream () (make-instance 'audio-stream-type))
(defclass audio-stream () ((audio-stream-ptr :initarg :audio-stream-ptr)))
(defmethod translate-to-foreign (x (type audio-stream-type)) (slot-value x 'audio-stream-ptr))
(defmethod translate-from-foreign (x (type audio-stream-type)) (make-instance 'audio-stream :audio-stream-ptr x))
(defctype audio-session-callback (:pointer (:pointer :void)))
(defctype audio-stream-callback (:pointer (:pointer :void)))
(defctype audio-status-callback nullary)
(defcfun (audio-begin-session "fae_audio_begin_session") audio-session)
(defcfun (audio-end-session "fae_audio_end_session") :void (a audio-session))
(defcfun (audio-with-session "fae_audio_with_session") :void (a audio-session-callback) (b ptr) (c error-callback) (d ptr))
(defcfun (audio-all "fae_audio_all") list (a audio-session))
(defcfun (audio-default "fae_audio_default") pair (a audio-session))
(defcfun (audio-default-input "fae_audio_default_input") audio-device (a audio-session))
(defcfun (audio-default-output "fae_audio_default_output") audio-device (a audio-session))
(defcfun (audio-set-status-callback "fae_audio_set_status_callback") :void (a audio-status-callback) (b ptr) (c audio-session))
(defcfun (audio-name "fae_audio_name") string (a audio-device))
(defcfun (audio-host-name "fae_audio_host_name") string (a audio-device))
(defcfun (audio-has-input "fae_audio_has_input") :boolean (a audio-device))
(defcfun (audio-has-output "fae_audio_has_output") :boolean (a audio-device))
(defcfun (audio-input-type "fae_audio_input_type") type (a audio-device))
(defcfun (audio-output-type "fae_audio_output_type") type (a audio-device))
(defcfun (audio-open-stream "fae_audio_open_stream") audio-stream (a audio-device) (b ptr) (c audio-device))
(defcfun (audio-close-stream "fae_audio_close_stream") :void (a audio-stream))
(defcfun (audio-with-stream "fae_audio_with_stream") :void (a audio-device) (b ptr) (c audio-device) (d audio-stream-callback) (e ptr) (f error-callback) (g ptr))

